src/test/ui/lang-item-missing.stderr
error: requires `sized` lang_item
  --> $DIR/lang-item-missing.rs:10:50
   |
LL | fn start(argc: isize, argv: *const *const u8) -> isize {
   |                                                  ^^^^^

error: aborting due to previous error

